--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@svelteuidev/composables": "^0.7.5",
 		"@svelteuidev/core": "^0.7.5",
 		"is-reachable": "^5.2.1",
+		"radix-icons-svelte": "^1.2.1",
 		"whois": "^2.13.9"
 	}
 }
